[package]
name = "command"
version = "0.1.0"
authors = ["Yota Toyama <raviqqe@gmail.com>"]
edition = "2018"

[[bin]]
name = "ein"
path = "src/main.rs"

[dependencies]
app = { path = "../../lib/app" }
clap = "2"
lang = { path = "../../lib/lang" }
infra = { path = "../../lib/infra" }
lazy_static = "1"
