[package]
name = "ein"
version = "0.1.0"
authors = ["Yota Toyama <raviqqe@gmail.com>"]
edition = "2018"

[dependencies]
core = { path = "../core" }
indoc = "0.3"
nom = "5"
pretty_assertions = "0.6"
semver = { version = "0.9", features = ["serde"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
