[package]
name = "ein"
version = "0.1.0"
authors = ["Yota Toyama <raviqqe@gmail.com>"]
edition = "2018"

[dependencies]
combine = { version = "4.1.0", features = ["regex"] }
lazy_static = "1"
regex = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
ssf = { git = "https://github.com/raviqqe/ssf", branch = "master" }
ssf-llvm = { git = "https://github.com/raviqqe/ssf", branch = "master" }

[dev-dependencies]
indoc = "0.3"
pretty_assertions = "0.6"
