[package]
name = "lang"
version = "0.1.0"
authors = ["Yota Toyama <raviqqe@gmail.com>"]
edition = "2018"

[dependencies]
combine = { version = "4.4.0", features = ["regex"] }
derivative = "2"
indoc = "1.0"
insta = { version = "1.3", features = ["backtrace"] }
lazy_static = "1"
regex = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
ssf = { git = "https://github.com/raviqqe/ssf", branch = "master" }
ssf-llvm = { git = "https://github.com/raviqqe/ssf", branch = "master" }

[dev-dependencies]
pretty_assertions = "0.6"
