[package]
name = "lang"
version = "0.1.0"
authors = ["Yota Toyama <raviqqe@gmail.com>"]
edition = "2018"

[dependencies]
combine = { version = "4.5.2", features = ["regex"] }
derivative = "2"
fmm = { git = "https://github.com/raviqqe/fmm", branch = "main" }
fmm-llvm = { git = "https://github.com/raviqqe/fmm", branch = "main" }
indoc = "1.0"
insta = { version = "1.7", features = ["backtrace"] }
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
eir = { git = "https://github.com/ein-lang/eir", branch = "main" }
eir-fmm = { git = "https://github.com/ein-lang/eir", branch = "main" }

[dev-dependencies]
pretty_assertions = "0.7"
